<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".BiodataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panggilan_edit"
            android:textColor="#202020"
            android:layout_marginTop="60dp"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/contoh"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:layout_marginTop="60dp"
            android:textSize="25sp"
            android:text="@string/umur_kamu"/>
        <EditText
            android:id="@+id/umur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:hint="@string/contoh_umur"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:layout_weight="8">
        <Button
            android:id="@+id/btn_selanjutnya"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/selanjutnya"/>

    </LinearLayout>

</LinearLayout>