<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:background="#f2f2f2"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode_keluaraga"
            android:textSize="29sp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginTop="5dp"
            android:text="@string/ketik_kode"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/round_edittext"
            android:inputType="text"
            android:text="A1B2C3"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="13sp"
            android:text="@string/setuju"/>
        <Button
            android:id="@+id/btn_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/masuk"
            android:background="@drawable/round_button"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical"
        android:layout_weight="5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/belum_punya_kode"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/beli_kode"
            android:textColor="#f2f2f2"
            android:background="@drawable/button_beli_kode"/>
    </LinearLayout>



</LinearLayout>